--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webpack-loader/raw",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "Raw Loader",
   "main": "src/index.js",
   "files": [
